@@ -1,6 +1,8 @@
 package dk.itu.ui;
 
+import com.google.common.collect.Lists;
 import dk.itu.common.models.Drawable;
+import dk.itu.data.models.heightcurve.HeightCurveElement;
 
 import java.awt.*;
 import java.awt.image.BufferedImage;
@@ -12,9 +14,9 @@ import static dk.itu.ui.FloodingApp.HEIGHT;
 import static dk.itu.ui.FloodingApp.WIDTH;
 
 public class BufferedImagePoolManager {
-    private static final int ELEMENTS_PER_BUFFER = 5_000, ELEMENTS_BEFORE_SPLIT = ELEMENTS_PER_BUFFER * 2;
+    private static final int ELEMENTS_PER_BUFFER = 1_000, ELEMENTS_BEFORE_SPLIT = ELEMENTS_PER_BUFFER * 2, THREADS = Runtime.getRuntime().availableProcessors();
     private final State state;
-    private final ExecutorService executor = Executors.newVirtualThreadPerTaskExecutor();
+    private final ExecutorService executor = Executors.newCachedThreadPool();
     private final BufferedImage finalImageToDrawTo = createBufferedImage();
     private final List<BufferedImage> bufferedImages = new LinkedList<>();
 
@@ -27,43 +29,45 @@ public class BufferedImagePoolManager {
     }
 
     public <T extends Drawable> void drawElements(List<T> elements) throws ExecutionException, InterruptedException {
+        final SuperAffine capturedTransform = new SuperAffine(state.getSuperAffine());
+
         // 60FPS is reached when 10_000 elements are drawn
         if (elements.size() > ELEMENTS_BEFORE_SPLIT) {
-            drawElementsMultiBuffer(elements);
+            drawElementsMultiBuffer(elements, capturedTransform);
         } else {
-            drawElementsSingleBuffer(elements);
+            drawElementsSingleBuffer(elements, capturedTransform);
         }
     }
 
-    public <T extends Drawable> void drawElementsSingleBuffer(List<T> elements) {
-        float strokeBaseWidth = state.getSuperAffine().getStrokeBaseWidth();
+    public <T extends Drawable> void drawElementsSingleBuffer(List<T> elements, SuperAffine capturedTransform) {
+        float strokeBaseWidth = capturedTransform.getStrokeBaseWidth();
 
-        var g2d = createGraphicsWaterBackgroundSingleBuffer(finalImageToDrawTo);
+        var g2d = createGraphicsWaterBackgroundSingleBuffer(finalImageToDrawTo, capturedTransform);
 
         for (T element : elements) {
             element.draw(g2d, strokeBaseWidth);
         }
     }
 
-    public <T extends Drawable> void drawElementsMultiBuffer(List<T> elements) throws ExecutionException, InterruptedException {
-        float strokeBaseWidth = state.getSuperAffine().getStrokeBaseWidth();
+    public <T extends Drawable> void drawElementsMultiBuffer(List<T> elements, SuperAffine capturedTransform) throws ExecutionException, InterruptedException {
+        float strokeBaseWidth = capturedTransform.getStrokeBaseWidth();
 
         Graphics2D finalG2d = createGraphicsWaterBackground(finalImageToDrawTo);
 
-        int splits = Math.max(1, elements.size() / ELEMENTS_PER_BUFFER);
+        List<List<T>> partitions = Lists.partition(elements, elements.size() / THREADS);
 
-        CompletableFuture<BufferedImage>[] bufferedImageFutures = new CompletableFuture[splits];
+        CompletableFuture<BufferedImage>[] bufferedImageFutures = new CompletableFuture[partitions.size()];
 
-        for (int i = 0; i < splits; i++) {
+        for (int i = 0; i < partitions.size(); i++) {
             int finalI = i;
             bufferedImageFutures[i] = CompletableFuture.supplyAsync(() -> {
                 BufferedImage img;
                 synchronized (bufferedImages) {
                     img = pollBufferedImage();
                 }
-                Graphics2D g2d = createGraphicsTransparent(img);
+                Graphics2D g2d = createGraphicsTransparent(img, capturedTransform);
 
-                for (T element : elements.subList(finalI*ELEMENTS_PER_BUFFER, Math.min(elements.size(), (finalI+1)*ELEMENTS_PER_BUFFER))) {
+                for (T element : partitions.get(finalI)) {
                     element.draw(g2d, strokeBaseWidth);
                 }
 
@@ -91,7 +95,7 @@ public class BufferedImagePoolManager {
         }
         return bufferedImages.removeFirst();
     }
-    private void releaseBufferedImage(BufferedImage img) {
+    private synchronized void releaseBufferedImage(BufferedImage img) {
         bufferedImages.add(img);
     }
 
@@ -103,14 +107,9 @@ public class BufferedImagePoolManager {
                 .createCompatibleImage(WIDTH, HEIGHT, BufferedImage.TYPE_INT_ARGB_PRE);
     }
 
-    private Graphics2D createGraphicsWaterBackgroundSingleBuffer(BufferedImage image) {
-        Graphics2D g2d = image.createGraphics();
-        applyQualitySettings(g2d);
-
-        g2d.setBackground(Color.decode("#a9d3de"));
-        g2d.clearRect(0, 0, WIDTH, HEIGHT);
-        g2d.setTransform(state.getSuperAffine());
-
+    private Graphics2D createGraphicsWaterBackgroundSingleBuffer(BufferedImage image, SuperAffine capturedTransform) {
+        Graphics2D g2d = createGraphicsWaterBackground(image);
+        g2d.setTransform(capturedTransform);
         return g2d;
     }
 
@@ -124,16 +123,17 @@ public class BufferedImagePoolManager {
         return g2d;
     }
 
-    private Graphics2D createGraphicsTransparent(BufferedImage image) {
-        image.flush();
-
+    private Graphics2D createGraphicsTransparent(BufferedImage image, SuperAffine capturedTransform) {
         Graphics2D g2d = image.createGraphics();
+
+        // Single, reliable clear operation
         g2d.setComposite(AlphaComposite.Clear);
         g2d.fillRect(0, 0, WIDTH, HEIGHT);
 
+        // Reset to normal drawing mode
         g2d.setComposite(AlphaComposite.SrcOver);
         applyQualitySettings(g2d);
-        g2d.setTransform(state.getSuperAffine());
+        g2d.setTransform(capturedTransform);
 
         return g2d;
     }
